pagina parte html

--- a/index.html
+++ b/index.html
@@ -7,34 +7,13 @@
      <meta name="keywords" content=""/>
      <title>pagina web</title>
 
-     <style media="screen">
-
-       div{
-         text-align: center;
-       }
-       body{
-         background-color: #DCDCDC;
-       }
-       section{
-         background-color: white;
-         width: 50%;
-         margin: auto;
-       }
-
-       footer{
-         background-color: #444;
-         color: white;
-         height: 100px;
-       }
-
-
-     </style>
+     <link rel="stylesheet" href="./css/estilo.css">
 
   </head>
   <body>
     <div id="principal">
 
-      <header>
+      <header class="topo">
         <nav>
           <ul>
             <li><a href="index.html" target="_blank">Início</a></li>
@@ -42,26 +21,28 @@
             <li><a href="#" target="_blank">contato</a></li>
           </ul>
         </nav>
-        <h1>curso web fundamentos</h1>
-        <p>aprenda HTML, CSS e Javascript</p>
+        <div class="topo-content">
+          <h1>curso web fundamentos</h1>
+          <p>aprenda HTML, CSS e Javascript</p>
+        </div>
       </header>
 
 
       <main>
         <section>
           <div class="card">
-            <img src="" alt="">
-            <p>seletores</p>
+            <img src="./imagens/imagens-/card_01.png" alt="">
+            <p class="imagens">seletores</p>
           </div>
 
           <div class="card">
-            <img src="" alt="">
-            <p>posicionamento</p>
+            <img src="./imagens/imagens-/card_05.jpg" alt="">
+            <p class="imagens">posicionamento</p>
           </div>
 
           <div class="card">
-            <img src="" alt="">
-            <p>fontes e ícones</p>
+            <img src="./imagens/imagens-/card_03.jpg" alt="">
+            <p class="imagens">fontes e ícones</p>
           </div>
         </section>
         <section>
