--- a/index_2.html
+++ b/index_2.html
@@ -15,9 +15,9 @@
       <header class="topo">
         <nav class="topo-menu">
           <ul>
-            <li>portfolio</li>
-            <li>about us</li>
-            <li>contact</li>
+            <li><a href="#">portfolio</a></li>
+            <li><a href="#">about us</a></li>
+            <li><a href="#">contact</a></li>
           </ul>
           <img src="./imagens/imagens--/logo.png" alt="" class="topo-imagem">
         </nav>
@@ -60,14 +60,15 @@
 
         <section class="s2">
           <div class="">
-            <h1>Everything Never Enough<br>Just Fashion</h1>
+            <h1>everything never enough<br>just fashion</h1>
             <p>
-              Praesent placerat eros eget lacus ullamcorper, id dapibus ante vestibulum. Curabitur quis condimentum diam.
-              Duis aliquet erat vel laoreet tincidunt. Pellentesque vitae varius ligula. Phasellus in nibh tempus, gravida justo et,
-              suscipit felis. Cras ornare arcu ac sodales tincidunt. Mauris vehicula erat vel ligula porttitor imperdiet. Curabitur nec magna
-              urna. Sed porta ex ex, at pulvinar nibh aliquet quis. Integer dapibus congue vestibulum. Phasellus bibendum lobortis quam, nec
+              Praesent placerat eros eget lacus ullamcorper, id dapibus ante<br> vestibulum. Curabitur quis condimentum diam.
+              Duis aliquet erat vel<br> laoreet tincidunt. Pellentesque vitae varius ligula. Phasellus in nibh<br> tempus, gravida justo et,
+              suscipit felis. Cras ornare arcu ac sodales<br> tincidunt. Mauris vehicula erat vel ligula porttitor imperdiet. Curabitur<br> nec magna
+              urna. Sed porta ex ex, at pulvinar nibh aliquet quis.<br> Integer dapibus congue vestibulum. Phasellus bibendum lobortis<br> quam, nec
               sollicitudin nisl volutpat at.
             </p>
+            <img src="./imagens/imagens-/bg_detalhe.png" alt="" class="detalhe">
           </div>
         </section>
 
