--- a/index_2.html
+++ b/index_2.html
@@ -68,7 +68,7 @@
               urna. Sed porta ex ex, at pulvinar nibh aliquet quis.<br> Integer dapibus congue vestibulum. Phasellus bibendum lobortis<br> quam, nec
               sollicitudin nisl volutpat at.
             </p>
-            <img src="./imagens/imagens-/bg_detalhe.png" alt="" class="detalhe">
+            <img src="./imagens/imagens--/bg_detalhe.png" alt="logo" class="detalhe">
           </div>
         </section>
 
