--- a/index_treinando.html
+++ b/index_treinando.html
@@ -16,9 +16,9 @@
           <li class="nome">
             <h1>Natureza</h1>
           </li>
-          <li><a href="#">sobre</a></li>
-          <li><a href="#">imagens</a></li>
-          <li><a href="#">locais</a></li>
+          <li><a href="./floresta_sobre.html">sobre</a></li>
+          <li><a href="./floresta_imagens.html">imagens</a></li>
+          <li><a href="./floresta_locais.html">locais</a></li>
         </ul>
       </nav>
     </header>
