--- a/index_fashion.html
+++ b/index_fashion.html
@@ -7,12 +7,12 @@
      <meta name="keywords" content=""/>
      <title>fashion</title>
 
-     <link rel="stylesheet" href="/css/estilo_fashion.css">
+     <link rel="stylesheet" href="./css/estilo_fashion.css">
   </head>
   <body>
     <div id="principal">
-      <header class="header-topo">
-        <img src="./imagens/imagens--/logo.png" alt="Logotipo Fashion">
+      <header class="header-top">
+        <img class="logotipo" src="./imagens/imagens--/logo.png" alt="Logotipo Fashion">
         <nav class="header-nav">
           <ul>
             <li><a href="#"></a>Portfolio</li>
