--- a/index_fashion.html
+++ b/index_fashion.html
@@ -15,9 +15,9 @@
         <img class="logotipo" src="./imagens/imagens--/logo.png" alt="Logotipo Fashion">
         <nav class="header-nav">
           <ul>
-            <li><a href="#"></a>Portfolio</li>
-            <li><a href="#"></a>About us</li>
-            <li><a href="#"></a>Contact</li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">About us</a></li>
+            <li><a href="#">Contact</a></li>
           </ul>
         </nav>
       </header>
@@ -86,7 +86,9 @@
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d224486.23348416976!2d-52.95459551608386!3d-28.46155040092154!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94fd492498d6957f%3A0x9a8b601ccba4050d!2sN%C3%A3o-Me-Toque%20-%20RS%2C%2099470-000!5e0!3m2!1spt-BR!2sbr!4v1575332567007!5m2!1spt-BR!2sbr" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
       </div>
 
-      <footer>Copyright &copy; fastfashion.com</footer>
+      <footer class="rodape">
+        Copyright &copy; fastfashion.com
+      </footer>
     </div>
   </body>
 </html>
