--- a/09_display.html
+++ b/09_display.html
@@ -32,7 +32,7 @@
          padding: 50px;
        }
        b{
-         visibility: hidden; 
+         visibility: hidden;
        }
        img{
          display: block;
@@ -60,7 +60,7 @@
       leo.
     </p>
     <p>
-      <img src="./imagens/css3.png" class="img css" alt="Logotipo CSS">
+      <img src="./imagens/imagens-/css3.png" class="img css" alt="Logotipo CSS">
       Suco de cevadiss deixa as pessoas mais interessantis. Manduma
       pindureta quium dia nois paga. Admodum accumsan disputationi
       eu sit. Vide electram sadipscing et per. Casamentiss faiz
