--- a/08.2_imagens.html
+++ b/08.2_imagens.html
@@ -13,7 +13,7 @@
          width: 700px;
          margin: auto;
          font-style: oblique;
-         background-image: url(imagens/tile.png);
+         background-image: url(imagens/imagens-/tile.png);
          background-attachment: fixed;
          background-size: 100% 100%;
          background-repeat: no-repeat;
@@ -42,7 +42,7 @@
        a:hover{
          color: #444;
        }
-       
+
 
      </style>
 
@@ -56,7 +56,7 @@
       lacinia ultrices consectetur. Sed non ipsum felis. Cevadis im
       ampola pa arma uma pindureta.
     </p>
-    <img src="./imagens/html5.png" class="img-html" alt="Logotipo HTML5">
+    <img src="./imagens/imagens-/html5.png" class="img-html" alt="Logotipo HTML5">
     <p>
       Delegadis gente finis, bibendum egestas augue arcu ut est.
       Aenean aliquam molestie leo, vitae iaculis nisl. Interagi no
@@ -69,7 +69,7 @@
       Manduma pindureta quium dia nois paga. Copo furadis é disculpa
       de bebadis, arcu quam euismod magna.
     </p>
-    <img src="./imagens/css3.png" class="img-css"alt="Logotipo CSS3">
+    <img src="./imagens/imagens-/css3.png" class="img-css"alt="Logotipo CSS3">
     <p>
       Vehicula non. Ut sed ex eros. Vivamus sit amet nibh non tellus
       tristique interdum. Praesent malesuada urna nisi, quis volutpat
