--- a/09_treinando.html
+++ b/09_treinando.html
@@ -18,7 +18,7 @@
        margin: auto;
      }
      header{
-       background-image: url(imagens/imagens/bg-4.jpg);
+       background-image: url(imagens/imagens-/bg-4.jpg);
        background-size:cover;
        width: 100%;
        height: 400px;
@@ -80,9 +80,9 @@
       <h4 class="batata">Aprenda HTML, CSS, e JavaScript</h4>
     </header>
     <section class="secao1">
-      <img src="./imagens/imagens/card_01.png" alt="">
-      <img src="./imagens/imagens/card_05.jpg" alt="">
-      <img src="./imagens/imagens/card_03.jpg" alt="">
+      <img src="./imagens/imagens-/card_01.png" alt="">
+      <img src="./imagens/imagens-/card_05.jpg" alt="">
+      <img src="./imagens/imagens-/card_03.jpg" alt="">
     </section>
     <section id="parte2" style="margin-bottom: 60px">
       <article class="">
