--- a/index_2.html
+++ b/index_2.html
@@ -19,7 +19,7 @@
             <li><a href="#">about us</a></li>
             <li><a href="#">contact</a></li>
           </ul>
-          <img src="./imagens/imagens--/logo.png" alt="" class="topo-imagem">
+          <img src="./imagens/imagens-/logo.png" alt="" class="topo-imagem">
         </nav>
       </header>
 
@@ -37,19 +37,19 @@
             </p>
             <div class="principal-imagens">
               <div class="p-foto1 foto">
-                <img src="./imagens/imagens--/modelo1.jpg" alt="">
+                <img src="./imagens/imagens-/modelo1.jpg" alt="">
                 <h2>Vest Romasa</h2>
                 <p>Strong & charismatic</p>
               </div>
 
               <div class="p-foto2 foto">
-                <img src="./imagens/imagens--/modelo2.jpg" alt="">
+                <img src="./imagens/imagens-/modelo2.jpg" alt="">
                 <h2>Jacket Fima</h2>
                 <p>Strong Sersonality</p>
               </div>
 
               <div class="p-foto3 foto">
-                <img src="./imagens/imagens--/modelo3.jpg" alt="">
+                <img src="./imagens/imagens-/modelo3.jpg" alt="">
                 <h2>Jacket Black Kira</h2>
                 <p>Power Fascinating</p>
               </div>
@@ -68,7 +68,7 @@
               urna. Sed porta ex ex, at pulvinar nibh aliquet quis.<br> Integer dapibus congue vestibulum. Phasellus bibendum lobortis<br> quam, nec
               sollicitudin nisl volutpat at.
             </p>
-            <img src="./imagens/imagens--/bg_detalhe.png" alt="logo" class="detalhe">
+            <img src="./imagens/imagens-/bg_detalhe.png" alt="logo" class="detalhe">
           </div>
         </section>
 
