--- a/index_fashion.html
+++ b/index_fashion.html
@@ -12,7 +12,7 @@
   <body>
     <div id="principal">
       <header class="header-top">
-        <img class="logotipo" src="./imagens/imagens--/logo.png" alt="Logotipo Fashion">
+        <img class="logotipo" src="./imagens/imagens-/logo.png" alt="Logotipo Fashion">
         <nav class="header-nav">
           <ul>
             <li><a href="#">Portfolio</a></li>
@@ -21,7 +21,7 @@
           </ul>
         </nav>
       </header>
-      <img src="./imagens/imagens--/topo.jpg" alt="Modelo feminina vestindo roupa colorida com um cinto dourado">
+      <img src="./imagens/imagens-/topo.jpg" alt="Modelo feminina vestindo roupa colorida com um cinto dourado">
 
       <article class="portfolio">
         <h1>New Fashion Everything Never Enough</h1>
@@ -40,19 +40,19 @@
       <section class="gallery">
 
         <article class="gallery-card">
-          <img src="./imagens/imagens--/modelo1.jpg" alt="homem vestindo sobretudo preto">
+          <img src="./imagens/imagens-/modelo1.jpg" alt="homem vestindo sobretudo preto">
           <p class="gallery-title">Vest Romasa</p>
           <p class="gallery-text">Strong &amp; charismatic</p>
         </article>
 
         <article class="gallery-card">
-          <img src="./imagens/imagens--/modelo2.jpg" alt="mulher com jaqueta jeans e com cachecol">
+          <img src="./imagens/imagens-/modelo2.jpg" alt="mulher com jaqueta jeans e com cachecol">
           <p class="gallery-title">Jacket Fima</p>
           <p class="gallery-text">Strong Sersonality</p>
         </article>
 
         <article class="gallery-card">
-          <img src="./imagens/imagens--/modelo3.jpg" alt="mulher de jaqueta de couro">
+          <img src="./imagens/imagens-/modelo3.jpg" alt="mulher de jaqueta de couro">
           <p class="gallery-title">Jacket Black Kira</p>
           <p class="gallery-text">Power Fascinating</p>
         </article>
