--- a/18_form.html
+++ b/18_form.html
@@ -9,19 +9,19 @@
 
   </head>
   <body>
-    <h1>Exemplo de formulário teste agora</h1>
+    <h1>Exemplo de formulário</h1>
     <form action="#" method="post" class="formlogin">
       <fieldset>
         <legend>Dados pessoais</legend>
 
         <label>Email</label>
-        <input type="email" required maxlength="5">
+        <input type="email" required maxlength="5" placeholder="digite seu email">
 
         <label>Telefone</label>
-        <input type="tel" name="" value="">
+        <input type="tel" name="" value="" placeholder="digite seu telefone">
 
         <label>Número de filhos</label>
-        <input type="number" min="0" max="1000">
+        <input type="number" min="0" max="1000" step="0.5">
 
         <br>
         <label>Nascimento</label>
