--- a/projeto strata/index.html
+++ b/projeto strata/index.html
@@ -24,7 +24,6 @@
         </h1>
     </header>
 
-
     <main class="main-content">
         <section class="main-content-section">
             <h2>Quando o header é aside e o aside é o header</h2>
@@ -179,12 +178,111 @@ alert('oi');
                <li><i class="fab fa-facebook"></i></li>
                <li><i class="fab fa-instagram"></i></li>
                <li><i class="fab fa-pinterest"></i></li>
-            </ol>
+            </ul>
+
+            <h5>Actions</h5>
+
+            <p>
+                <a href="#" title="Veja mais" class="button-default">default</a>
+                <a href="#" title="Veja mais" class="button-default button-default-stroke">default</a>
+            </p>
+            <p>
+                <a href="#" title="Veja mais" class="button-default button-default-small">default</a>
+                <a href="#" title="Veja mais" class="button-default button-default-small button-default-stroke">default</a>
+            </p>
+            <p>
+                <a href="#" title="Veja mais" class="button-default button-default-full">default</a>
+                <a href="#" title="Veja mais" class="button-default button-default-full button-default-stroke">default</a>
+            </p>
+
+            <h4>Table</h4>
+            <h5>Default</h5>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Description</th>
+                        <th>Price</th>
+                    </tr>
+                </thead>
+                <tfoot>
+                    <tr>
+                        <td colspan="2"></td>
+                        <td>100.00</td>
+                    </tr>
+                </tfoot>
+                <tbody>
+                    <tr>
+                        <td>Item One</td>
+                        <td>Ante turpis integer aliquet porttitor.</td>
+                        <td>29.99</td>
+                    </tr>
+                    <tr>
+                        <td>Item Two</td>
+                        <td>Vis ac commodo adipiscing arcu aliquet.</td>
+                        <td>19.99</td>
+                    </tr>
+                    <tr>
+                        <td>Item Three</td>
+                        <td>Morbi faucibus arcu accumsan lorem.</td>
+                        <td>29.99</td>
+                    </tr>
+                    <tr>
+                        <td>Item Four</td>
+                        <td>Vitae integer tempus condimentum.</td>
+                        <td>19.99</td>
+                    </tr>
+                    <tr>
+                        <td>Item Five</td>
+                        <td>Ante turpis integer aliquet porttitor.</td>
+                        <td>29.99</td>
+                    </tr>
+                </tbody>
+            </table>
+            <h5>Alternate</h5>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Description</th>
+                        <th>Price</th>
+                    </tr>
+                </thead>
+                <tfoot>
+                    <tr>
+                        <td colspan="2"></td>
+                        <td>100.00</td>
+                    </tr>
+                </tfoot>
+                <tbody>
+                    <tr>
+                        <td>Item One</td>
+                        <td>Ante turpis integer aliquet porttitor.</td>
+                        <td>29.99</td>
+                    </tr>
+                    <tr>
+                        <td>Item Two</td>
+                        <td>Vis ac commodo adipiscing arcu aliquet.</td>
+                        <td>19.99</td>
+                    </tr>
+                    <tr>
+                        <td>Item Three</td>
+                        <td>Morbi faucibus arcu accumsan lorem.</td>
+                        <td>29.99</td>
+                    </tr>
+                    <tr>
+                        <td>Item Four</td>
+                        <td>Vitae integer tempus condimentum.</td>
+                        <td>19.99</td>
+                    </tr>
+                    <tr>
+                        <td>Item Five</td>
+                        <td>Ante turpis integer aliquet porttitor.</td>
+                        <td>29.99</td>
+                    </tr>
+                </tbody>
+            </table>
         </section>
-
-        <!-- <section>
-
-        </section> -->
     </main>
 
 
